2011-05-25  Corinna Vinschen  <corinna@vinschen.de>

	* posix.sgml (std-notes): Add missing <para>.

2011-05-24  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (mount_info::conv_to_win32_path): Remove unused code.
	* mount.h (class mount_info): Remove sys_mount_table_counter member.
	* shared_info.h (class shared_info): Ditto.
	(CURR_SHARED_MAGIC): Update.

2011-05-24  Corinna Vinschen  <corinna@vinschen.de>

	* pinfo.h (struct _pinfo): Reduce size of progname array slightly.
	Explain why.

2011-05-23  Eric Blake  <eblake@redhat.com>

	* errno.cc (strerror): Print unknown errno as int.
	(__xpg_strerror_r): Likewise, and don't clobber strerror buffer.
	* cygtls.h (strerror_buf): Resize to allow '-'.

2011-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (thread_info::fill_if_match): Reformat.
	(format_process_maps): Ditto.  Fetch pointer to procinfo structure
	from mapped process.  Print info about global shared Cygwin regions.

2011-05-21  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (struct dos_drive_mappings): Use malloc/free
	rather than cmalloc/cfree.  Check return value from malloc before
	using it.
	(struct heap_info): Ditto.
	(struct thread_info): Ditto.  Rename from stack_info.  Rename members
	and local variables accordingly.
	(thread_info::thread_info): Store stack and TEB addresses.
	(thread_info::fill_if_match): Print "teb" if a TEB address has been
	found.  Special case for WOW64, explain why.
	(format_process_maps): Fetch PEB address.  Print MEM_RESERVE regions
	with equal signs to distinguish them from PAGE_NOACCESS regions.  Fix
	printing of 'p' and 's' to differ between MEM_PRIVATE and MEM_MAPPED
	pages, as on Linux.  Print 'g' instead of 'p for PAGE_GUARD pages.
	Print PEB and SharedUserData area if recognized.

2011-05-20  Corinna Vinschen  <corinna@vinschen.de>

	* miscfuncs.cc (CygwinCreateThread): Fix condition for adding the
	guardsize to the stacksize.  Fix accompanying comment.
